--- a/scss/game/game.css
+++ b/scss/game/game.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @keyframes arrowMoveLeft {
@@ -52,6 +53,104 @@
     transform: translateY(0);
   }
 }
+#navbar {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 4rem;
+  transition: background-color 0.5s;
+  background: transparent;
+  z-index: 100;
+}
+.navbar .navbar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 6rem;
+  width: 100vw;
+}
+.navbar .navbar-container .navbar-container-left {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  flex: 2;
+}
+.navbar .navbar-container .navbar-container-left > img {
+  height: auto;
+  width: 8rem;
+}
+.navbar .navbar-container .navbar-container-left > a {
+  background-color: transparent;
+  outline: none;
+  border: none;
+  height: 3rem;
+  color: white;
+  width: fit-content;
+  font-weight: normal;
+  font-size: 20px;
+  cursor: pointer;
+  margin-left: 2rem;
+  font-family: "Kanit", sans-serif;
+  text-decoration: none;
+}
+.navbar .navbar-container .navbar-container-left > a .underline {
+  width: 0;
+  height: 0.125rem;
+  background-color: rgb(254, 31, 136);
+  transition: width 0.5s;
+}
+.navbar .navbar-container .navbar-container-left > a:hover .underline {
+  width: 100%;
+}
+.navbar .navbar-container .navbar-container-right {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  flex: 1;
+}
+.navbar .navbar-container .navbar-container-right > button {
+  font-weight: 600;
+  font-size: 20px;
+  padding: 0.75rem 0.75rem 0.6rem;
+  background-color: transparent;
+  outline: none;
+  cursor: pointer;
+  transition: background-color 0.5s;
+  border: 0.1rem solid white;
+}
+.navbar .navbar-container .navbar-container-right > button > a {
+  color: white;
+  text-decoration: none;
+  text-underline: none;
+  transition: color 0.5s;
+}
+.navbar .navbar-container .navbar-container-right > button:hover {
+  background-color: white;
+}
+.navbar .navbar-container .navbar-container-right > button:hover > a {
+  color: rgb(254, 31, 136);
+}
+
+.navbar-scrolled {
+  background-color: black;
+}
+
+body {
+  height: calc(100vh + 4rem);
+  overflow-y: auto;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -67,8 +166,32 @@
   align-items: center;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   position: relative;
+}
+.container #loading-modal {
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000000;
+  color: white;
+  font-family: "Press Start 2P", cursive;
+  background-color: transparent;
+  user-select: none;
+}
+.container #loading-modal > h3 {
+  margin-bottom: 1rem;
+  background-color: transparent;
+  font-size: 24px;
+}
+.container #loading-modal > p {
+  margin-bottom: 1rem;
+  background-color: transparent;
 }
 .container #game {
   width: fit-content;
