--- a/scss/game/game.scss
+++ b/scss/game/game.scss
@@ -1,8 +1,111 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 @import "animations";
 @import "variables";
+@import "mixins";
+
 
 $pink-color: rgb(254, 31, 136);
+
+
+#navbar {
+  margin: 0;
+  padding: 0;
+  background-color: black;
+}
+
+.navbar {
+  @include flex-rules(row, center, center);
+  @include size(100vw, 4rem);
+  //position: fixed;
+  transition: background-color 0.5s;
+  background: transparent;
+  z-index: 100;
+
+  .navbar-container {
+    @include flex-rules(row, space-between, center);
+    padding: 0 6rem;
+    width: 100vw;
+
+
+    .navbar-container-left {
+      @include flex-rules(row, start, center);
+      flex: 2;
+
+      > img {
+        height: auto;
+        width: 8rem;
+      }
+
+      > a {
+        background-color: transparent;
+        outline: none;
+        border: none;
+        height: 3rem;
+        color: white;
+        width: fit-content;
+        font-weight: normal;
+        font-size: 20px;
+        cursor: pointer;
+        margin-left: 2rem;
+        font-family: "Kanit", sans-serif;
+        text-decoration: none;
+
+
+        .underline {
+          width: 0;
+          height: 0.125rem;
+          background-color: $pink-color;
+          transition: width 0.5s;
+        }
+
+        &:hover .underline {
+          width: 100%;
+        }
+      }
+    }
+
+    .navbar-container-right {
+      @include flex-rules(row, end, center);
+      flex: 1;
+
+      > button {
+        font-weight: 600;
+        font-size: 20px;
+        padding: 0.75rem 0.75rem 0.6rem;
+        background-color: transparent;
+        outline: none;
+        cursor: pointer;
+        transition: background-color 0.5s;
+        border: 0.1rem solid white;
+
+        > a {
+          color: white;
+          text-decoration: none;
+          text-underline: none;
+          transition: color 0.5s;
+        }
+
+        &:hover {
+          background-color: white;
+
+          > a {
+            color: $pink-color;
+          }
+        }
+      }
+    }
+  }
+}
+
+.navbar-scrolled {
+  background-color: black;
+}
+
+body {
+  height: calc(100vh + 4rem);
+  overflow-y: auto;
+}
 
 * {
   margin: 0;
@@ -11,6 +114,7 @@ $pink-color: rgb(254, 31, 136);
   background-color: black;
   user-select: none;
 }
+
 
 @mixin flex-rules($direction, $justify, $align) {
   display: flex;
@@ -76,8 +180,32 @@ $pink-color: rgb(254, 31, 136);
   @include flex-rules(row, center, center);
   @include size(100vw, 100vh);
   //@include max-size(1920px, 1080vh);
-  overflow: hidden;
   position: relative;
+
+  #loading-modal {
+    opacity: 0;
+    @include flex-rules(column, center, center);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000000;
+    color: white;
+    font-family: 'Press Start 2P', cursive;
+    background-color: transparent;
+    user-select: none;
+
+    > h3 {
+      margin-bottom: 1rem;
+      background-color: transparent;
+      font-size: 24px;
+    }
+
+    > p {
+      margin-bottom: 1rem;
+      background-color: transparent;
+    }
+  }
 
   #game {
     @include size(fit-content, fit-content);
@@ -303,6 +431,7 @@ $pink-color: rgb(254, 31, 136);
       position: absolute;
       top: 0;
       background-color: transparent;
+      //margin-top: 4rem;
     }
   }
 
