--- a/scss/game/front/world.scss
+++ b/scss/game/front/world.scss
@@ -260,7 +260,7 @@
           @include absolute(40%, 50%);
 
           > img {
-            object-position: center 0rem;
+            object-position: center 0;
           }
         }
       }
