--- a/scss/game/game.css
+++ b/scss/game/game.css
@@ -33,16 +33,6 @@
     opacity: 0;
   }
 }
-@keyframes buttonBorderBottom {
-  0% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 0;
-  }
-  100% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 100%;
-  }
-}
 @keyframes onLoad {
   from {
     opacity: 0;
@@ -106,7 +96,7 @@
 .navbar .navbar-container .navbar-container-left > a .underline {
   width: 0;
   height: 0.125rem;
-  background-color: rgb(254, 31, 136);
+  background-color: rgb(253, 27, 94);
   transition: width 0.5s;
 }
 .navbar .navbar-container .navbar-container-left > a:hover .underline {
@@ -139,11 +129,298 @@
   background-color: white;
 }
 .navbar .navbar-container .navbar-container-right > button:hover > a {
-  color: rgb(254, 31, 136);
+  color: rgb(253, 27, 94);
 }
 
 .navbar-scrolled {
   background-color: black;
+}
+
+#loading-modal {
+  opacity: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000000;
+  color: white;
+  font-family: "Press Start 2P", cursive;
+  background-color: transparent;
+  user-select: none;
+}
+#loading-modal > h3 {
+  margin-bottom: 1rem;
+  background-color: transparent;
+  font-size: 24px;
+}
+#loading-modal > p {
+  margin-bottom: 1rem;
+  background-color: transparent;
+}
+
+#menu-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#menu-modal > div {
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: button;
+  cursor: pointer;
+  background-color: transparent;
+  text-align: center;
+  width: 91%;
+}
+#menu-modal > div:hover {
+  background-color: rgb(253, 27, 94);
+}
+
+#selection-modal {
+  align-items: center;
+}
+#selection-modal .title {
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: title;
+  background-color: transparent;
+  text-align: center;
+}
+#selection-modal .image-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: button;
+  background-color: transparent;
+  width: 35rem;
+  margin-top: 2rem;
+  text-align: center;
+}
+#selection-modal .image-container .arrow-left {
+  animation: arrowMoveLeft 0.5s steps(2) infinite;
+  background-color: transparent;
+  width: 20rem;
+  cursor: pointer;
+}
+#selection-modal .image-container img {
+  width: 30rem;
+  height: fit-content;
+  aspect-ratio: 92/140;
+}
+#selection-modal .image-container .arrow-right {
+  animation: arrowMoveRight 0.5s steps(2) infinite;
+  background-color: transparent;
+  width: 20rem;
+  cursor: pointer;
+}
+#selection-modal .button {
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: button;
+  width: 91%;
+  text-align: center;
+}
+#selection-modal .button:hover {
+  background-color: rgb(253, 27, 94);
+}
+
+#settings-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: none;
+}
+#settings-modal .title {
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: title;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  text-align: center;
+}
+#settings-modal .settings-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: button;
+  width: 100%;
+  text-align: center;
+  background-color: transparent;
+}
+#settings-modal .settings-container .settings-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: transparent;
+  background-color: transparent;
+  width: 91%;
+  padding: 1.5vw 0;
+}
+#settings-modal .settings-container .settings-content:hover {
+  background-color: rgb(253, 27, 94);
+}
+#settings-modal .settings-container .settings-content .settings-content-title {
+  width: 20rem;
+}
+#settings-modal .settings-container .settings-content > div {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 91%;
+  background-color: transparent;
+}
+#settings-modal .settings-container .settings-content > div > span {
+  background-color: transparent;
+}
+#settings-modal .settings-container .settings-content > div .volume-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#settings-modal .settings-container .settings-content > div .volume-bar .volume-meter {
+  width: 1.5vw;
+  height: 2vw;
+  margin: 0 0.1rem;
+}
+#settings-modal .settings-container .settings-content > div .volume-bar .on {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+#settings-modal .settings-container .settings-content > div .volume-bar .off {
+  background-color: rgba(100, 100, 100, 0.5);
+}
+#settings-modal .settings-container .settings-content .arrow-left {
+  animation: arrowMoveLeft 0.5s steps(2) infinite;
+  opacity: 0;
+  background-color: transparent;
+  width: 3rem;
+  cursor: pointer;
+}
+#settings-modal .settings-container .settings-content .arrow-right {
+  animation: arrowMoveRight 0.5s steps(2) infinite;
+  opacity: 0;
+  background-color: transparent;
+  width: 3rem;
+  cursor: pointer;
+}
+#settings-modal .settings-container .settings-content:hover * .arrow-left {
+  opacity: 100% !important;
+}
+#settings-modal .settings-container .settings-content:hover .arrow-right {
+  opacity: 100% !important;
+}
+#settings-modal .exit-button {
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: button;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  background-color: transparent;
+  width: 91%;
+  background-color: transparent;
+  text-align: center;
+}
+#settings-modal .exit-button:hover {
+  background-color: rgb(253, 27, 94);
+}
+#settings-modal .exit-button > div {
+  background-color: transparent;
+}
+
+#pause-modal .modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal {
+  width: 55vw;
+  height: auto;
+  max-width: 960px;
+  max-height: 1000px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: none;
+  background-repeat: no-repeat;
+  background-size: cover;
+  image-rendering: pixelated;
+  aspect-ratio: 18/15;
+  background-color: transparent;
+  background-image: url("/assets/ui/menu_modal.png");
+  opacity: 100%;
+  position: absolute;
+  display: none;
+  z-index: 100;
+}
+
+.modal-background {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 1920px;
+  max-height: 1080px;
+  width: 100vw;
+  height: 100vh;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 100;
+}
+.modal-background .modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+}
+.modal-background .modal .title {
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: title;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+  text-align: center;
+}
+.modal-background .modal .button {
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  font-family: "omnes-pro", sans-serif;
+  font-size: button;
+  width: 91%;
+  text-align: center;
+}
+.modal-background .modal .button:hover {
+  background-color: rgb(253, 27, 94);
 }
 
 body {
@@ -166,32 +443,8 @@ body {
   align-items: center;
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
   position: relative;
-}
-.container #loading-modal {
-  opacity: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 1000000;
-  color: white;
-  font-family: "Press Start 2P", cursive;
-  background-color: transparent;
-  user-select: none;
-}
-.container #loading-modal > h3 {
-  margin-bottom: 1rem;
-  background-color: transparent;
-  font-size: 24px;
-}
-.container #loading-modal > p {
-  margin-bottom: 1rem;
-  background-color: transparent;
 }
 .container #game {
   width: fit-content;
@@ -212,26 +465,6 @@ body {
   aspect-ratio: 16/9;
   position: absolute;
   background-color: transparent;
-}
-.container .ui .modal {
-  width: 55vw;
-  height: auto;
-  max-width: 960px;
-  max-height: 1000px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: none;
-  background-repeat: no-repeat;
-  background-size: cover;
-  image-rendering: pixelated;
-  aspect-ratio: 18/15;
-  background-color: transparent;
-  background-image: url("/assets/ui/menu_modal.png");
-  opacity: 100%;
-  position: absolute;
-  display: none;
-  z-index: 100;
 }
 .container .ui #menu-modal {
   display: flex;
@@ -430,50 +663,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-.container .ui .modal-background {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  max-width: 1920px;
-  max-height: 1080px;
-  width: 100vw;
-  height: 100vh;
-  display: none;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 100;
-}
-.container .ui .modal-background .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
-}
-.container .ui .modal-background .modal .title {
-  color: white;
-  font-family: "Press Start 2P", cursive;
-  font-size: 2vw;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: transparent;
-  text-align: center;
-}
-.container .ui .modal-background .modal .button {
-  cursor: pointer;
-  background-color: transparent;
-  color: white;
-  font-family: "Press Start 2P", cursive;
-  font-size: 1.5vw;
-  padding: 1vw 0;
-  width: 91%;
-  text-align: center;
-}
-.container .ui .modal-background .modal .button:hover {
-  background-color: rgb(254, 31, 136);
-}
 .container .ui #HUD {
   max-width: 1920px;
   max-height: 1080px;
@@ -497,6 +686,39 @@ body {
 .container #ending-screen {
   display: none;
   z-index: 10;
+}
+
+@keyframes arrowMoveLeft {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-10%);
+  }
+}
+@keyframes arrowMoveRight {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(10%);
+  }
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100%;
+  }
+}
+@keyframes fadeOut {
+  0% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 /*# sourceMappingURL=game.css.map */
