--- a/scss/game/index.css
+++ b/scss/game/index.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import "front/navbar.css";
+@import "front/footer.css";
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+@import "front/news.css";
+@import "front/ost.css";
 @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
 @keyframes arrowMoveLeft {
   0% {
@@ -33,16 +36,6 @@
   }
   100% {
     opacity: 0;
-  }
-}
-@keyframes buttonBorderBottom {
-  0% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 0;
-  }
-  100% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 100%;
   }
 }
 @keyframes onLoad {
@@ -125,93 +118,6 @@
   letter-spacing: 0.1rem;
   letter-spacing: 0.1rem;
   font-family: "Kanit", sans-serif;
-}
-
-.navbar {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100vw;
-  height: 4rem;
-  position: fixed;
-  transition: background-color 0.5s;
-  background: transparent;
-  z-index: 100;
-}
-.navbar .navbar-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 6rem;
-  width: 100vw;
-}
-.navbar .navbar-container .navbar-container-left {
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: center;
-  flex: 2;
-}
-.navbar .navbar-container .navbar-container-left > img {
-  height: auto;
-  width: 8rem;
-}
-.navbar .navbar-container .navbar-container-left > button {
-  background-color: transparent;
-  outline: none;
-  border: none;
-  height: 3rem;
-  color: white;
-  width: fit-content;
-  font-weight: normal;
-  font-size: 20px;
-  cursor: pointer;
-  margin-left: 2rem;
-  font-family: "Kanit", sans-serif;
-}
-.navbar .navbar-container .navbar-container-left > button .underline {
-  width: 0;
-  height: 0.125rem;
-  background-color: rgb(253, 27, 94);
-  transition: width 0.5s;
-}
-.navbar .navbar-container .navbar-container-left > button:hover .underline {
-  width: 100%;
-}
-.navbar .navbar-container .navbar-container-right {
-  display: flex;
-  flex-direction: row;
-  justify-content: end;
-  align-items: center;
-  flex: 1;
-}
-.navbar .navbar-container .navbar-container-right > button {
-  font-weight: 600;
-  font-size: 20px;
-  padding: 0.75rem 0.75rem 0.6rem;
-  background-color: transparent;
-  outline: none;
-  cursor: pointer;
-  transition: background-color 0.5s;
-  border: 0.1rem solid white;
-}
-.navbar .navbar-container .navbar-container-right > button > a {
-  color: white;
-  text-decoration: none;
-  text-underline: none;
-  transition: color 0.5s;
-}
-.navbar .navbar-container .navbar-container-right > button:hover {
-  background-color: white;
-}
-.navbar .navbar-container .navbar-container-right > button:hover > a {
-  color: rgb(253, 27, 94);
-}
-
-.navbar-scrolled {
-  background-color: black;
 }
 
 .score-container {
@@ -298,49 +204,6 @@
   margin: 0;
 }
 
-.footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  width: 100vw;
-  height: 12rem;
-  overflow-y: hidden;
-}
-.footer > img {
-  position: absolute;
-  width: 100vw;
-  height: 15rem;
-  object-fit: cover;
-  filter: blur(2px);
-}
-.footer .footer-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: "Kanit", sans-serif;
-  font-size: 1rem;
-}
-.footer .footer-container .footer-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  margin-bottom: 1rem;
-}
-.footer .footer-container .footer-header .icons {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  width: 3rem;
-  aspect-ratio: 1;
-}
-
 .trailer {
   display: flex;
   flex-direction: column;
@@ -387,16 +250,6 @@
   }
   100% {
     opacity: 0;
-  }
-}
-@keyframes buttonBorderBottom {
-  0% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 0;
-  }
-  100% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 100%;
   }
 }
 @keyframes onLoad {
@@ -764,7 +617,7 @@
   transform: translate(-50%, -50%);
 }
 .map-container .image-container .boss-marker .boss-image.fifth > img {
-  object-position: center 0rem;
+  object-position: center 0;
 }
 .map-container .image-container .boss-marker > img {
   aspect-ratio: 0.812;
@@ -834,266 +687,6 @@
   }
   100% {
     opacity: 0;
-  }
-}
-@keyframes buttonBorderBottom {
-  0% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 0;
-  }
-  100% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 100%;
-  }
-}
-@keyframes onLoad {
-  from {
-    opacity: 0;
-    transform: translateY(10%);
-  }
-  to {
-    opacity: 100%;
-    transform: translateY(0);
-  }
-}
-.latest-news-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 0 2rem;
-  overflow-y: hidden;
-}
-.latest-news-container .title-container {
-  width: 90%;
-  height: 10rem;
-  overflow-y: hidden;
-}
-.latest-news-container .title-container > h3 {
-  font-family: "Kanit", sans-serif;
-  font-weight: 600;
-  color: white;
-  font-size: 48px;
-  border-bottom: 0.3rem solid rgb(253, 27, 94);
-  width: fit-content;
-}
-.latest-news-container .horizontal-news-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 1rem;
-  width: 90%;
-}
-.latest-news-container .horizontal-news-container .news-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: white;
-  width: 100%;
-  margin: 2rem 0;
-  transition: 0.25s linear;
-  cursor: pointer;
-  overflow-y: hidden;
-  border: 5px solid black;
-}
-.latest-news-container .horizontal-news-container .news-container:hover {
-  -webkit-transform: translateY(-10px);
-  transform: translateY(-10px);
-  box-shadow: 0 0 1rem 1rem inset;
-  border: 5px solid rgb(253, 27, 94);
-}
-.latest-news-container .horizontal-news-container .news-container > img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.latest-news-container .horizontal-news-container .news-container .news-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  background-color: white;
-  width: 100%;
-  height: 14rem;
-  margin: 1rem;
-  overflow-y: hidden;
-}
-.latest-news-container .horizontal-news-container .news-container .news-content .header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  font-family: Kanit, serif;
-  justify-content: space-between;
-  overflow-y: hidden;
-}
-.latest-news-container .horizontal-news-container .news-container .news-content .header > p {
-  color: black;
-  font-weight: bold;
-  font-family: Kanit, serif;
-  margin: 1vw 1.5vw 0;
-}
-.latest-news-container .horizontal-news-container .news-container .news-content .header > p:nth-child(2) {
-  color: rgb(253, 27, 94);
-}
-.latest-news-container .horizontal-news-container .news-container .news-content .content {
-  margin: 0 1vw;
-  color: black;
-  overflow-y: hidden;
-}
-.latest-news-container .horizontal-news-container .news-container .news-content .content > h3 {
-  margin: 1vw 0 0 0.5vw;
-  font-family: Kanit, serif;
-  font-size: 24px;
-  font-weight: 500;
-}
-.latest-news-container .horizontal-news-container .news-container .news-content .content > p {
-  font-weight: normal;
-  font-family: Kanit, serif;
-  line-height: 20px;
-  font-size: 14px;
-  margin: 0.5vw 0.5vw 0;
-}
-
-.ost-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.ost-container .inner-container-ost {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.ost-container .inner-container-ost > h3 {
-  font-family: "Kanit", sans-serif;
-  font-weight: 600;
-  color: white;
-  font-size: 40px;
-  border-bottom: 0.3rem solid rgb(253, 27, 94);
-  margin-bottom: 2rem;
-}
-.ost-container .inner-container-ost .ost-content {
-  display: flex;
-  flex-direction: row;
-  justify-content: start;
-  align-items: flex-start;
-  gap: 2rem;
-}
-.ost-container .inner-container-ost .ost-content .content-left {
-  width: 30vw;
-}
-.ost-container .inner-container-ost .ost-content .content-left > img {
-  width: 100%;
-  height: 100%;
-}
-.ost-container .inner-container-ost .ost-content .content-right {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: flex-start;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-header .audio-toggle-button {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  background-color: rgb(253, 27, 94);
-  outline: none;
-  border: none;
-  color: white;
-  padding: 0.1rem;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-header .audio-toggle-button.disabled {
-  display: none;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-header .audio-content {
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: flex-start;
-  margin-left: 1rem;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-header .audio-content > h3 {
-  font-family: Kanit, sans-serif;
-  font-size: 32px;
-  padding: 0;
-  margin: 0;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-header .audio-content > p {
-  font-family: Kanit, sans-serif;
-  font-size: 18px;
-  padding: 0;
-  margin: 0;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-slider {
-  width: 60vw;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-right-slider .slider {
-  width: 100%;
-  height: 100%;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-audio-visualizer {
-  width: 60vw;
-  height: 30vw;
-  overflow: hidden;
-}
-.ost-container .inner-container-ost .ost-content .content-right .content-audio-visualizer > canvas {
-  width: 60vw;
-  height: 30vw;
-}
-
-@keyframes arrowMoveLeft {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-10%);
-  }
-}
-@keyframes arrowMoveRight {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(10%);
-  }
-}
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 100%;
-  }
-}
-@keyframes fadeOut {
-  0% {
-    opacity: 100%;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes buttonBorderBottom {
-  0% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 0;
-  }
-  100% {
-    border-bottom: 0.2rem solid rgb(253, 27, 94);
-    border-bottom-width: 100%;
   }
 }
 @keyframes onLoad {
@@ -1201,7 +794,7 @@ html, body {
 }
 .background-color.five {
   top: 220rem;
-  left: 0%;
+  left: 0;
   transform: rotate(20deg);
 }
 .background-color.six {
