--- a/scss/game/index.scss
+++ b/scss/game/index.scss
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "animations";
 @import "front/about";
-@import "front/navbar";
+@import "front/navbar.css";
 @import "front/score";
-@import "front/footer";
+@import "front/footer.css";
 @import "front/trailer";
 @import "front/mainCharacter";
 @import "front/world";
-@import "front/news";
-@import "front/ost";
+@import "front/news.css";
+@import "front/ost.css";
 @import "mixins";
 @import "animations";
 
@@ -119,7 +119,7 @@ html, body {
 
   &.five {
     top: 220rem;
-    left: 0%;
+    left: 0;
     transform: rotate(20deg);
   }
 
